WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154617
[WebGL] iOS doesn't respect the alpha:false context creation attribute
https://bugs.webkit.org/show_bug.cgi?id=154617
Summary
[WebGL] iOS doesn't respect the alpha:false context creation attribute
Dean Jackson
Reported
2016-02-23 16:45:35 PST
[WebGL] iOS doesn't respect the alpha:false context creation attribute
Attachments
Patch
(10.51 KB, patch)
2016-02-23 16:53 PST
,
Dean Jackson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2016-02-23 16:52:01 PST
<
rdar://problem/13417023
>
Dean Jackson
Comment 2
2016-02-23 16:53:13 PST
Created
attachment 272066
[details]
Patch
Dean Jackson
Comment 3
2016-02-23 17:22:34 PST
Committed
r197008
: <
http://trac.webkit.org/changeset/197008
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug