Source/WebCore/platform/graphics/mac/GraphicsContext3DMac.mm
@@ -227,9 +227,6 @@ GraphicsContext3D::GraphicsContext3D(GraphicsContext3D::Attributes attrs, HostWi
     // Create the WebGLLayer
     BEGIN_BLOCK_OBJC_EXCEPTIONS
         m_webGLLayer = adoptNS([[WebGLLayer alloc] initWithGraphicsContext3D:this]);
-#if PLATFORM(IOS)
-        [m_webGLLayer setOpaque:0];
-#endif
 #ifndef NDEBUG
         [m_webGLLayer setName:@"WebGL Layer"];
 #endif
@@ -345,7 +342,9 @@ GraphicsContext3D::~GraphicsContext3D()
 bool GraphicsContext3D::setRenderbufferStorageFromDrawable(GC3Dsizei width, GC3Dsizei height)
 {
     [m_webGLLayer setBounds:CGRectMake(0, 0, width, height)];
-    return [m_contextObj renderbufferStorage:GL_RENDERBUFFER fromDrawable:static_cast<NSObject<EAGLDrawable>*>(m_webGLLayer.get())];
+    [m_webGLLayer setOpaque:(m_internalColorFormat != GL_RGBA8)];
+
+    return [m_contextObj renderbufferStorage:GL_RENDERBUFFER fromDrawable:static_cast<id<EAGLDrawable>>(m_webGLLayer.get())];
 }
 #endif
 
